src/App.css
main {
  margin: 0;
  box-sizing: border-box;
  background-color: rgb(149, 170, 155);
  grid-column: span 3;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  gap: 10px;
  align-items: center;
  padding-bottom: 15px;
}

nav {
  display: flex;
  flex-direction: row;
  height: 60px;
  background-color: black;
  justify-content: space-between;
  align-items: center;
}

nav div {
  font-size: 25px;
  margin: 20px;
  color: beige;
  justify-content: center;
}

section {
  display: flex;
}

main class {
  background-color: white;
  color: black;
  font-size: 12px;
}

img {
  align-items: center;
  flex-direction: row;
  justify-content: space-evenly;
  max-width: 100%;
  max-height: 80%;
}

footer {
  display: flex;
  flex-direction: row;
  height: 40px;
  background-color: black;
  color: beige;
  justify-content: space-between;
}

.flex-ctr {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
}

.main-text {
  display: flex;
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}

.rule-text {
  display: flex;
  flex-direction: row;
}

.footer-text {
  text-align: center;
  font-size: 18px;
  color: beige;
}

h1 {
  font-family: Georgia, 'Times New Roman', Times, serif;
  font-display: Georgia;
  font-weight: bold;
  text-align: left;
  font-size: 24px;
  color: black;
}

h3 {
  font-family: Georgia, 'Times New Roman', Times, serif;
  font-display: Georgia;
  font-weight: normal;
  text-align: left;
  font-size: 18px;
  color: red;
}

h4 {
  font-family: Georgia, 'Times New Roman', Times, serif;
  font-display: Georgia;
  font-weight: normal;
  text-align: left;
  font-size: 16px;
  color: blue;
}

/* unvisited link */
a:link {
  color: red;
}

/* visited link */
a:visited {
  color: green;
}

/* mouse over link */
a:hover {
  color: hotpink;
}

a :hover {
  color: beige;
}

nav,
footer {
  grid-column: span 2;
}

